Fix button color scheme in dark mode

--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -113,3 +113,9 @@ p.button-content {
         box-shadow: 0px 6px 15px #00000017 !important
     }
 }
+
+@media screen and (prefers-color-scheme: dark) {
+    a.button-wrapper div.button {
+        box-shadow: 0 0 0 1px grey
+    }
+}
